--- a/medi/pubspec.yaml
+++ b/medi/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.4
   flutter_local_notifications: ^9.3.1
   intl: ^0.17.0
+  flutter_tts: ^3.3.4
 
 dev_dependencies:
   flutter_test:
